# DNSGuard

./: .gitignore  README.md  pyproject.toml  report.html  report.json
.github/workflows/: tests.yml
dnsguard/: cli.py
dnsguard/checks/: caa.py  dnssec.py  email.py  takeover.py
dnsguard/core/: cache.py  resolver.py  trace.py  utils.py
dnsguard/data/: root_hints.json
dnsguard/report/: render_html.py
docs/: methodology.md
tests/: test_rules.py  test_spf_parser.py
